Fix alignment on contact form on about page

--- a/assets/scss/screen.scss
+++ b/assets/scss/screen.scss
@@ -2007,13 +2007,12 @@ div.terminal-view {
     textarea {
         margin-bottom: 20px;
         max-height: 500px;
-        min-height: 100px;
+        min-height: 92px;
         resize: vertical;
     }
 
     button {
         width: 100%;
-        height: 40px;
     }
 
     h4 {
